[tool.poetry]
name = "mt-telescope"
version = "0.0.2"
description = "A visual platform for contrastive evaluation of machine translation systems"
authors = ["Ricardo Rei, Craig Stewart, Catarina Farinha, Alon Lavie"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Unbabel/MT-Telescope"
repository = "https://github.com/Unbabel/MT-Telescope"
documentation = "https://github.com/Unbabel/MT-Telescope/README.md"
keywords = [
    "Machine Translation", 
    "Evaluation",
    "Unbabel",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
packages = [
    {include = "telescope"},
]
include = [
    "LICENSE",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0.0"
unbabel-comet = "1.0.1"
bert-score = ">=0.3.7"
sacrebleu = ">=2.0.0"
stanza = ">=1.2"
streamlit = "^0.79.0"
plotly = "^4.14.3"
numpy = ">=1.20.0"
pytorch-nlp = "0.5.0"
scipy = ">=1.5.4"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
black = "^20.8b1"

[tool.poetry.scripts]
telescope = 'telescope.cli:telescope'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
